--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  I am a PhD student at MIT, affiliated with MIT CSAIL and AeroAstro. My experience spans <hl>training and steering foundation models (language, audio, etc), 3D computer vision, and robotics.</hl> My ultimate goal is to develop <hl>general-purpose intelligence</hl> that advances how machines <hl>understand, interact, and create</hl> in both the digital and physical worlds. I am fortunate to work with <hl>Dr. Brian Anthony</hl> and <hl>Bill Freeman</hl> at MIT.
+  I am a PhD student at MIT, affiliated with MIT CSAIL and AeroAstro. My experience spans <hl>foundation models (language, audio, etc), 3D computer vision, and robotics.</hl> My ultimate goal is to develop <hl>general-purpose intelligence</hl> that advances how machines <hl>understand, interact, and create</hl> in both the digital and physical worlds. I am fortunate to work with <hl>Dr. Brian Anthony</hl> and <hl>Bill Freeman</hl> at MIT.
 </font></p>
 <p><font face="Verdana">
   I also have extensive experience <hl>converting cutting-edge research into practical products</hl>. I co-founded <a href="www.myshell.ai">MyShell.ai</a> and developed the agentic framework for everyone to build AI agents without coding. The platform now has >3M users and more than 10K apps are built.
