--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@ ul {
 }
 
 a:link {
-  color:rgb(158, 3, 3);
+  color:rgb(130, 3, 3);
   background-color: transparent;
   text-decoration: none;
 }
 
 hl {
-  color:rgb(158, 3, 3);
+  color:rgb(130, 3, 3);
   background-color: transparent;
   text-decoration: none;
 }
 
 hl2 {
-  color: rgb(158, 3, 3);
+  color: rgb(130, 3, 3);
   background-color: transparent;
   text-decoration: underline;
 }
 
 a:visited {
-  color: rgb(158, 3, 3);
+  color: rgb(130, 3, 3);
   background-color: transparent;
   text-decoration: none;
 }
@@ -88,10 +88,13 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  I am a PhD student at MIT, affiliated with MIT CSAIL and AeroAstro. My experience spans <hl>foundation models (language, audio, etc), 3D computer vision, and robotics.</hl> My ultimate goal is to develop <hl>general-purpose intelligence</hl> that advances how machines <hl>understand, interact, and create</hl> in both the digital and physical worlds. I am fortunate to work with <hl>Dr. Brian Anthony</hl> and <hl>Bill Freeman</hl> at MIT.
+  I am a PhD student at MIT, affiliated with MIT CSAIL and AeroAstro. My experience spans <hl>foundation models (language, audio, etc), 3D computer vision, and robotics.</hl> My ultimate goal is to develop <hl>general-purpose intelligence</hl> that advances how machines <hl>understand, interact, and create</hl> in both the digital and physical worlds. I am fortunate to work with <hl>Dr. Brian Anthony</hl> and <hl>Prof. Bill Freeman</hl> at MIT.
 </font></p>
 <p><font face="Verdana">
-  I also have extensive experience <hl>converting cutting-edge research into practical products</hl>. I co-founded <a href="www.myshell.ai">MyShell.ai</a> and developed the agentic framework for everyone to build AI agents without coding. The platform now has >3M users and more than 10K apps are built.
+  Beyond research, I also have extensive experience <hl>transforming cutting-edge research into practical applications</hl>. I co-founded <a href="www.myshell.ai">MyShell.ai</a> and developed the agentic framework for everyone to build AI agents without coding. The platform now has >3M users and more than 10K apps are built.
+</font></p>
+<p><font face="Verdana">
+  Previously, I was also visiting researcher in <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab</a>, where I had the privilege of working with <hl>Prof. Fei-fei Li</hl>, <hl>Prof. Silvio Savarese</hl>, <hl>Prof. Yuke Zhu</hl> and <hl>Prof. Kuan Fang</hl>.
 </font></p>
 </div>
 
@@ -99,8 +102,9 @@ li {
 <h3><font face="Verdana">Education</h3>
 <p><font face="Verdana">
 <ul>
-<li><b>Massachusetts Institute of Technology</b>, 2020 - present <br> Doctor of Philosophy - PhD <br> Affiliated with <a href="https://www.csail.mit.edu/">MIT CSAIL</a> (Computer Science and Artificial Intelligence Laboratory) and <a href="https://aeroastro.mit.edu/">MIT AeroAstro</a>. </li>
+<li><b>Massachusetts Institute of Technology</b>, 2020 - present <br> Doctor of Philosophy - PhD <br> Affiliated with <a href="https://www.csail.mit.edu/">MIT CSAIL</a> (Computer Science and Artificial Intelligence Laboratory) and <a href="https://aeroastro.mit.edu/">MIT AeroAstro</a> </li>
 <li><b>Massachusetts Institute of Technology</b>, 2020 - 2022. Master of Science <br>
+<li><b>Stanford University</b>, 2019, Visiting Researcher in <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab</a> <br>
 <li><b>Tsinghua University</b>, 2016 - 2020. Bachelor of Engineering, Electronic Engineering<br>
 </ul>
 </font></p>
