--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ li {
   I am also the main author of several popular open-source projects. One has <a href="https://github.com/myshell-ai/OpenVoice">28k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. One receives <a href="https://huggingface.co/myshell-ai/MeloTTS-English">>4M average monthly downloads</a> (more than Stable Diffusion) on Huggingface.
 </font></p>
 <p><font face="Verdana">
-  Previously, I was also visiting researcher in <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab</a>, where I had the privilege of working with <hl>Prof. Fei-fei Li</hl>, <hl>Prof. Silvio Savarese</hl>, <hl>Prof. Yuke Zhu</hl> and <hl>Prof. Kuan Fang</hl>.
+  Previously, I was also visiting researcher in <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab</a>, where I had the privilege of working with <hl>Prof. Fei-fei Li</hl> and <hl>Prof. Silvio Savarese</hl>.
 </font></p>
 <p><font face="Verdana">
   Beyond research, I also have extensive experience <hl>transforming cutting-edge research into practical applications</hl>. I co-founded <a href="www.myshell.ai">MyShell.ai</a> and developed the agentic framework for everyone to build AI agents without coding. The platform now has >3M users and more than 10K apps are built.
