--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ li {
 </div>
 
 <div class="section">
-  <h3 id="publications"><font face="Verdana">Projects in Generative Models</h3>
+  <h3 id="generative-model-projects"><font face="Verdana">Projects in Generative Models</h3>
   <table width="100%">
 
   <!-- JetMoE -->
