--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@ li {
 <meta name="baidu-site-verification" content="Ctys5yXPkU" />
 <meta name="google-site-verification" content="9qnP6wIE8rh3TwMVrb84fWPqg9A_nDYEL3D6NGDjpwU" />
 <meta name="keywords" content="Zengyi Qin, Zen Qin, Charles Qin, Charles Z. Qin">
+<meta property="og:image" content="figures/zengyi.jpg">
+<meta property="og:image:width" content="256">
+<meta property="og:image:height" content="256">
+<meta property="og:image:type" content="image/jpeg">
 <title>Zengyi Qin | MIT</title>
 <meta charset="utf-8">
 
