--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ li {
 <meta property="og:image:width" content="256">
 <meta property="og:image:height" content="256">
 <meta property="og:image:type" content="image/jpeg">
+<meta property="og:title" content="Zengyi Qin">
+<meta property="og:description" content="MIT PhD | GenAI">
 <title>Zengyi Qin | MIT</title>
 <meta charset="utf-8">
 
