--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ li {
 <meta property="og:image:height" content="256">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:title" content="Zengyi Qin">
-<meta property="og:description" content="MIT PhD | GenAI">
+<meta property="og:description" content="MIT PhD | GenAI (language, audio)">
 <title>Zengyi Qin | MIT</title>
 <meta charset="utf-8">
 
