--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ li {
   I am a PhD student at MIT, affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a> and <a href="https://aeroastro.mit.edu">AeroAstro</a>. My experience spans <hl>foundation models (language, audio, etc), 3D computer vision, and robotics.</hl> My ultimate goal is to develop <hl>general-purpose intelligence</hl> that advances how machines <hl>understand, interact, and create</hl> in both the digital and physical worlds. I am fortunate to work with <hl>Dr. Brian Anthony</hl> and <hl>Prof. William T. Freeman</hl> at MIT.
 </font></p>
 <p><font face="Verdana">
-  I am also the main author of several popular open-source projects. One has <a href="https://github.com/myshell-ai/OpenVoice">28k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. One receives <a href="https://huggingface.co/myshell-ai/MeloTTS-English">>4M average monthly downloads</a> (more than Stable Diffusion) on Huggingface.
+  I am also the main author of several popular open-source projects. One has <a href="https://github.com/myshell-ai/OpenVoice">28k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. One receives <a href="https://www.linkedin.com/posts/activity-7247455370959368192-ZrPF">>4M average monthly downloads</a> (more than Stable Diffusion) on Huggingface.
 </font></p>
 <p><font face="Verdana">
   Previously, I was also visiting researcher in <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab</a>, where I had the privilege of working with <hl>Prof. Fei-fei Li</hl> and <hl>Prof. Silvio Savarese</hl>.
