--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  I am a PhD student at MIT, affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a> and <a href="https://aeroastro.mit.edu">AeroAstro</a>. My experience spans <hl>foundation models (language, audio, etc), 3D computer vision, and robotics.</hl> My ultimate goal is to develop <hl>general-purpose intelligence</hl> that advances how machines <hl>understand, interact, and create</hl> in both the digital and physical worlds. I am fortunate to work with <hl>Dr. Brian Anthony</hl> and <hl>Prof. William T. Freeman</hl> at MIT.
+  I am an MIT PhD student affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a>. My current research focus is <hl>LLM Reasoning in Multi-modal Context (vision, language, audio and spatial).</hl> My ultimate goal is to develop <hl>general-purpose intelligence</hl> that advances how machines <hl>understand, interact, and create</hl> in both the digital and physical worlds. I am fortunate to work with <hl>Dr. Brian Anthony</hl> and <hl>Prof. William T. Freeman</hl> at MIT.
 </font></p>
 <p><font face="Verdana">
   I am also the main author of several popular open-source projects. One has <a href="https://github.com/myshell-ai/OpenVoice">28k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. One receives <a href="https://www.linkedin.com/posts/activity-7247455370959368192-ZrPF">>4M average monthly downloads</a> (more than Stable Diffusion) on Huggingface.
@@ -149,6 +149,18 @@ li {
 <div class="section">
   <h3 id="genai"><font face="Verdana">Projects in Generative Models</h3>
   <table width="100%">
+
+  <!-- Visual reasoning -->
+  <tr>
+    <td width="25%" valign="middle"><p><img src="figures/visual_reasoning.png" alt="" style="border-style: none" width="250" align="top"></p></td>
+    <td width="75%" valign="top">
+    <p class="padding"><font face="Verdana">
+    <b><a id="reasoning">Visual Reasoning by Learning Symbolization</a></b><br>
+    Despite the impressive capabilities of LLMs in text-based reasoning, they remain far from achieving comparable proficiency in visual reasoning. We identified the core issue as their inability to symbolize visual input and propose learning latent symbolization to enhance their visual reasoning capabilities. <br>
+    <a href="https://www.qinzy.tech">paper coming soon</a><br>
+    </p>
+    </td>
+  </tr>
 
   <!-- JetMoE -->
   <tr>
