--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ li {
   <p><font face="Verdana">
    <ul>
     <li>
-      [Apr 2024] We released <hl>JetMoE-8B</hl>, which was trained from scratch with less than $0.1M cost but outperforms LLaMA2-7B. It went viral and received strong positive feedback from the field.
+      [Apr 2024] We released <hl>JetMoE-8B</hl>, an LLM pre-trained and post-trained from scratch with less than 0.1M USD cost but outperforms LLaMA2-7B. It democratized high-performance LLM pre-training and post-training, and received strong positive feedback from the field.
       <ul>
         <a href="https://research.myshell.ai/jetmoe">Technical blog</a> <br> 
         <a href="https://x.com/MIT_CSAIL/status/1775916496503656679">MIT CSAIL posts</a> <br> 
@@ -171,7 +171,7 @@ li {
     Yikang Shen, Zhen Guo, Tianle Cai and <b>Zengyi Qin</b><br>
     <i>Technical Report, 2024</i><br>
     </p>
-    <p class="padding"><font face="Verdana"> Training high-performance LLM with remarkable cost efficiency. <br>
+    <p class="padding"><font face="Verdana"> JetMoE is pre-trained and post-trained from scratch with less than 0.1M USD cost but outperforms LLaMA2-7B. It democratized high-performance LLM pre-training and post-training with remarkable cost-efficiency. <br>
     <a href="https://research.myshell.ai/jetmoe">website</a> | <a href="https://github.com/myshell-ai/JetMoE">github</a> | <a href="https://arxiv.org/pdf/2404.07413.pdf">tech report</a> <br>
     </p>
     </td>
