--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ li {
     <td width="25%" valign="middle"><p><img src="figures/visual_reasoning.png" alt="" style="border-style: none" width="250" align="top"></p></td>
     <td width="75%" valign="top">
     <p class="padding"><font face="Verdana">
-    <b><a id="reasoning">Visual Reasoning by Learning Symbolization</a></b><br>
+    <b><a id="reasoning">Visual Reasoning by Learning Latent Symbolization</a></b><br>
     Despite the impressive capabilities of LLMs in text-based reasoning, they remain far from achieving comparable proficiency in visual reasoning. We identified the core issue as their inability to symbolize visual input and propose learning latent symbolization to enhance their visual reasoning capabilities. <br>
     <a href="https://www.qinzy.tech">paper coming soon</a><br>
     </p>
