--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@ li {
   I am an MIT PhD student affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a>. My current research focus is <hl>LLM Reasoning in Multi-modal Context (vision, language, audio and spatial).</hl> My ultimate goal is to develop <hl>general-purpose intelligence</hl> that advances how machines <hl>understand, interact, and create</hl> in both the digital and physical worlds. I am fortunate to work with <hl>Dr. Brian Anthony</hl> and <hl>Prof. William T. Freeman</hl> at MIT.
 </font></p>
 <p><font face="Verdana">
+  I have solid experience pre-training and post-training LLMs. I was the project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE</a>,  an MoA+MoE LLM pre-trained and post-trained <hl>from scratch</hl> (not finetuning existing models) with less than 0.1M USD cost but outperforms LLaMA2-7B.
+</font></p>
+<p><font face="Verdana">
   I am also the main author of several popular open-source projects. One has <a href="https://github.com/myshell-ai/OpenVoice">28k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. One receives <a href="https://www.linkedin.com/posts/activity-7247455370959368192-ZrPF">>4M average monthly downloads</a> (more than Stable Diffusion) on Huggingface.
 </font></p>
 <p><font face="Verdana">
@@ -124,7 +127,7 @@ li {
   <p><font face="Verdana">
    <ul>
     <li>
-      [Apr 2024] We released <hl>JetMoE-8B</hl>, an LLM pre-trained and post-trained from scratch with less than 0.1M USD cost but outperforms LLaMA2-7B. It democratized high-performance LLM pre-training and post-training, and received strong positive feedback from the field.
+      [Apr 2024] We released <hl>JetMoE-8B</hl>, an MoA+MoE LLM pre-trained and post-trained from scratch with less than 0.1M USD cost but outperforms LLaMA2-7B. It democratized high-performance LLM pre-training and post-training, and received strong positive feedback from the field.
       <ul>
         <a href="https://research.myshell.ai/jetmoe">Technical blog</a> <br> 
         <a href="https://x.com/MIT_CSAIL/status/1775916496503656679">MIT CSAIL posts</a> <br> 
