--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  I am an MIT PhD student affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a>. My current research focus is <hl>LLM Reasoning in Multi-modal Context (vision, language, audio and spatial).</hl> My ultimate goal is to develop <hl>general-purpose intelligence</hl> that advances how machines <hl>understand, interact, and create</hl> in both the digital and physical worlds. I am fortunate to work with <hl>Dr. Brian Anthony</hl> and <hl>Prof. William T. Freeman</hl> at MIT.
+  I am an MIT PhD student affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a>. I am passionate about advancing the frontiers of generative models, with a recent focus on multi-modal reasoning in vision, language, audio, and spatial domains. My ultimate goal is to develop general-purpose intelligence that advances how machines understand, interact, and create in both the digital and physical worlds. I am fortunate to work with <hl>Dr. Brian Anthony</hl> and <hl>Prof. William T. Freeman</hl> at MIT.
 </font></p>
 <p><font face="Verdana">
   I have solid experience pre-training and post-training LLMs. I was the project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE</a>,  an MoA+MoE LLM pre-trained and post-trained <hl>from scratch</hl> (not finetuning existing models) with <hl>less than 0.1M USD cost</hl> but outperforms LLaMA2-7B.
