--- a/index.html
+++ b/index.html
@@ -94,19 +94,16 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  I am an MIT PhD student affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a>. I am passionate about advancing the frontiers of generative models, with a recent focus on multi-modal reasoning in vision, language, audio, and spatial domains. My ultimate goal is to develop general-purpose intelligence that advances how machines understand, interact, and create in both the digital and physical worlds. I am fortunate to work with <hl>Dr. Brian Anthony</hl> and <hl>Prof. William T. Freeman</hl> at MIT.
+  I am an MIT PhD student affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a>. I am passionate about advancing the frontiers of generative models, with a recent focus on multi-modal reasoning in vision, language, audio, and spatial domains. My ultimate goal is to develop general-purpose intelligence that understands, interacts, and creates in both the digital and physical worlds.
 </font></p>
 <p><font face="Verdana">
   I have solid experience pre-training and post-training LLMs. I was the project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE</a>,  an MoA+MoE LLM pre-trained and post-trained <hl>from scratch</hl> (not finetuning existing models) with <hl>less than 0.1M USD cost</hl> but outperforms LLaMA2-7B.
 </font></p>
 <p><font face="Verdana">
-  I am also the main author of several popular open-source projects. One has <a href="https://github.com/myshell-ai/OpenVoice">28k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. One receives <a href="https://www.linkedin.com/posts/activity-7247455370959368192-ZrPF">>4M average monthly downloads</a> (more than Stable Diffusion) on Huggingface.
+  I am also the main author of several widely recognized open-source projects. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <hl>top 0.03%</hl> of all open-source projects created during the similar peroid, based on stars. Another project receives <a href="https://www.linkedin.com/posts/activity-7247455370959368192-ZrPF">>4M downloads/month</a> on average (more than Stable Diffusion) on Huggingface.
 </font></p>
 <p><font face="Verdana">
-  Previously, I was also visiting researcher in <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab</a>, where I had the privilege of working with <hl>Prof. Fei-fei Li</hl> and <hl>Prof. Silvio Savarese</hl>.
-</font></p>
-<p><font face="Verdana">
-  Beyond research, I also have extensive experience <hl>transforming cutting-edge research into practical applications</hl>. I co-founded <a href="www.myshell.ai">MyShell.ai</a> and developed the agentic framework for everyone to build AI agents without coding. The platform now has >3M users and more than 10K apps are built.
+  Beyond research, I also have extensive experience <hl>transforming cutting-edge research into practical applications</hl>. I co-founded <a href="www.myshell.ai">MyShell.ai</a> and developed the agentic framework for everyone to build AI agents without coding. The platform now has <hl>>3M users</hl> and <hl>>10k AI agents</hl> are built.
 </font></p>
 </div>
 
@@ -114,7 +111,7 @@ li {
 <h3><font face="Verdana">Education</h3>
 <p><font face="Verdana">
 <ul>
-<li><b>Massachusetts Institute of Technology</b>, 2020 - present <br> Doctor of Philosophy - PhD <br> Affiliated with <a href="https://www.csail.mit.edu/">MIT CSAIL</a> (Computer Science and Artificial Intelligence Laboratory) and <a href="https://aeroastro.mit.edu/">MIT AeroAstro</a> </li>
+<li><b>Massachusetts Institute of Technology</b>, 2020 - 2025 <br> Doctor of Philosophy - PhD, affiliated with <a href="https://www.csail.mit.edu/">MIT CSAIL</a> and <a href="https://aeroastro.mit.edu/">MIT AeroAstro</a> </li>
 <li><b>Massachusetts Institute of Technology</b>, 2020 - 2022. Master of Science <br>
 <li><b>Stanford University</b>, 2019, Visiting Researcher in <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab</a> <br>
 <li><b>Tsinghua University</b>, 2016 - 2020. Bachelor of Engineering, Electronic Engineering<br>
@@ -139,7 +136,8 @@ li {
       [Jan 2024] We released <a href="https://research.myshell.ai/open-voice">OpenVoice</a>, allowing users to clone any voice and generate speech in various styles and languages.
       <ul>
         <a href="https://research.myshell.ai/open-voice">Technical blog</a> <br> 
-        Trended<a href="./figures/githubtrending-no1-v3.PNG"> 1st on Github</a>. Now 27k stars <br> 
+        Trended<a href="./figures/githubtrending-no1-v3.PNG"> 1st on Github</a> <br>
+        Now <hl>~30k stars</hl>, and ranked <hl>top 0.03%</hl> of all contemporary open-source projects based on stars <br> 
         <hl>Serving >3M users</hl> on MyShell. Solid production-grade algorithm <br>
         Covered by <a href='https://venturebeat.com/ai/open-source-ai-voice-cloning-arrives-with-myshells-new-openvoice-model/'>VentureBeat</a>, <a href="https://hyscaler.com/insights/ai-voice-cloning-revolution/">HyScaler</a> and other medias <br>
         <i>AI Voice Cloning Redefined: OpenVoice Unveils Revolutionary Open-Source Technology</i> (<a href="https://hyscaler.com/insights/ai-voice-cloning-revolution">1</a>)
