--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  I am an MIT PhD student affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a>. I am passionate about advancing the frontiers of generative models, with a recent focus on multi-modal reasoning in vision, language, audio, and spatial domains. My ultimate goal is to develop general-purpose intelligence that understands, interacts, and creates in both the digital and physical worlds.
+  I am a final-year MIT PhD student affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a>. I am passionate about pushing the frontiers of generative models, with a recent focus on scaling multi-modal reasoning in vision, language, audio, and spatial domains, by curating and synthesizing large datasets. My ultimate goal is to develop general-purpose intelligence that understands, interacts, and creates in both the digital and physical worlds.
 </font></p>
 <p><font face="Verdana">
   I have solid experience pre-training and post-training LLMs. I was the project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE</a>,  an MoA+MoE LLM pre-trained and post-trained <hl>from scratch</hl> (not finetuning existing models) with <hl>less than 0.1M USD cost</hl> but outperforms LLaMA2-7B.
@@ -124,7 +124,7 @@ li {
   <p><font face="Verdana">
    <ul>
     <li>
-      [Apr 2024] We released <hl>JetMoE-8B</hl>, an MoA+MoE LLM pre-trained and post-trained from scratch with less than 0.1M USD cost but outperforms LLaMA2-7B. It democratized high-performance LLM pre-training and post-training, and received strong positive feedback from the field.
+      [Apr 2024] I lead the development of <hl>JetMoE-8B</hl>, an MoA+MoE LLM pre-trained and post-trained from scratch with less than 0.1M USD cost but outperforms LLaMA2-7B. It democratized high-performance LLM pre-training and post-training, and received strong positive feedback from the field.
       <ul>
         <a href="https://research.myshell.ai/jetmoe">Technical blog</a> <br> 
         <a href="https://x.com/MIT_CSAIL/status/1775916496503656679">MIT CSAIL posts</a> <br> 
@@ -133,7 +133,7 @@ li {
       </ul>
     </li>
     <li>
-      [Jan 2024] We released <a href="https://research.myshell.ai/open-voice">OpenVoice</a>, allowing users to clone any voice and generate speech in various styles and languages.
+      [Jan 2024] I lead the development of <a href="https://research.myshell.ai/open-voice">OpenVoice</a>, an audio foundation model that allows users to clone any voice and generate speech in various styles and languages.
       <ul>
         <a href="https://research.myshell.ai/open-voice">Technical blog</a> <br> 
         Trended<a href="./figures/githubtrending-no1-v3.PNG"> 1st on Github</a> <br>
@@ -156,8 +156,8 @@ li {
     <td width="25%" valign="middle"><p><img src="figures/visual_reasoning.png" alt="" style="border-style: none" width="250" align="top"></p></td>
     <td width="75%" valign="top">
     <p class="padding"><font face="Verdana">
-    <b><a id="reasoning">Visual Reasoning by Learning Latent Symbolization</a></b><br>
-    Despite the impressive capabilities of LLMs in text-based reasoning, they remain far from achieving comparable proficiency in visual reasoning. We identified the core issue as their inability to symbolize visual input and propose learning latent symbolization to enhance their visual reasoning capabilities. <br>
+    <b><a id="reasoning">Visual Reasoning by Learning Latent Symbolization from Synthetic Data</a></b><br>
+    Despite the impressive capabilities of LLMs in text-based reasoning, they remain far from achieving comparable proficiency in visual reasoning. We identified the core issue as their inability to symbolize visual input, and propose <hl>learning latent symbolization from synthetic data</hl> to enhance their visual reasoning capabilities. <br>
     <a href="https://www.qinzy.tech">paper coming soon</a><br>
     </p>
     </td>
