--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ li {
 </div> 
 
   <div class="section">
-  <h3 id="publications"><font face="Verdana">Projects in Robotics</h3>
+  <h3 id="publications"><font face="Verdana">Projects in Reinforcement Learning and Robotics</h3>
   <table width="100%">
 
   <!-- Sablas -->
