--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ li {
   I have solid experience pre-training and post-training LLMs. I was the project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE</a>,  an MoA+MoE LLM pre-trained and post-trained <hl>from scratch</hl> (not finetuning existing models) with <hl>less than 0.1M USD cost</hl> but outperforms LLaMA2-7B.
 </font></p>
 <p><font face="Verdana">
-  I am also the main author of several widely recognized open-source projects. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <hl>top 0.03%</hl> of all open-source projects created during the similar period, based on popularity. Another project receives <a href="https://www.linkedin.com/posts/activity-7247455370959368192-ZrPF">>4M downloads/month</a> on average (more than Stable Diffusion) on Huggingface.
+  I am also the main author of several widely recognized open-source AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <hl>top 0.03%</hl> of all open-source projects created during the similar period, based on popularity. Another project receives <a href="https://www.linkedin.com/posts/activity-7247455370959368192-ZrPF">>4M downloads/month</a> on average (more than Stable Diffusion) on Huggingface.
 </font></p>
 <p><font face="Verdana">
-  Beyond research, I also have extensive experience <hl>transforming cutting-edge research into popular products</hl>. I co-founded <a href="https://www.myshell.ai">MyShell.ai</a> and developed the agentic framework for everyone to build AI agents without coding. The platform now has <hl>>3M users</hl> and <hl>>10,000 AI agents</hl> are built. The AI agents have supported <hl>>200M interactions</hl> with users.
+  Beyond research, I also have extensive experience <hl>transforming cutting-edge research into popular products</hl>. I co-founded <a href="https://www.myshell.ai">MyShell.ai</a> and developed the agentic framework for everyone to build AI agents without coding. The platform now has <hl>>3M users</hl> and <hl>>10,000 AI agents</hl> are built. The AI agents have had <hl>>200M interactions</hl> with users.
 </font></p>
 </div>
 
