--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ li {
   I am also the main author of several widely recognized open-source AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <hl>top 0.03%</hl> of all open-source projects created during the similar period, based on popularity. Another project receives <a href="https://www.linkedin.com/posts/activity-7247455370959368192-ZrPF">>4M downloads/month</a> on average (more than Stable Diffusion) on Huggingface.
 </font></p>
 <p><font face="Verdana">
-  Beyond research, I also have extensive experience <hl>transforming cutting-edge technology into popular products</hl>. I co-founded <a href="https://www.myshell.ai">MyShell.ai</a> for everyone to build and use AI agents. The platform now has <hl>>3M users</hl> and <hl>>10,000 AI agents</hl> are built. The users have had <hl>>200M interactions</hl> with the AI agents. Third-party web traffic statistics show that, on average, users <hl>spend more time on MyShell during each visit than on ChatGPT and/or GPT Store.</hl>
+  Beyond research, I also have extensive experience <hl>transforming cutting-edge technology into popular products</hl>. I co-founded <a href="https://www.myshell.ai">MyShell.ai</a> for everyone to build and use AI agents. The platform now has <hl>>3M users</hl> and <hl>>10,000 AI agents</hl> are built. The users have had <hl>>200M interactions</hl> with the AI agents. These make MyShell one of the most successful agent platforms on the market.
 </font></p>
 </div>
 
